# indoor-location

./: README.md
android-client/location-api/api/: build.gradle
android-client/location-api/app/: build.gradle
android/location/: settings.gradle
android/location/api/: build.gradle
android/location/app/: README.md  build.gradle
android/location/impl/: build.gradle
esp/beacon/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp/beacon/main/: CMakeLists.txt  beacon.c  ble.c  ble.h  button.c  button.h  config.h  esp_ibeacon_api.c  esp_ibeacon_api.h  http.c  http.h  light.c  light.h  list.c  list.h  parser.c  parser.h  signal_utils.c  signal_utils.h  utils.c  utils.h  wifi.c  wifi.h
esp/examples/ble_ibeacon/: sdkconfig
esp/examples/esp_http_client/: .gitignore  sdkconfig  sdkconfig.old
esp/examples/json_test/: CMakeLists.txt  cJSON.c  cJSON.h  location_system.c  location_system.h  main.c
esp/examples/list/: CMakeLists.txt  list.c  list.h  main.c
esp/examples/wifi_station/: sdkconfig
server/: .gitignore  README.md  api.html  api.py  api.raml  map.py  profile.txt  requeriments.txt
server/src/: dependency_container.py
server/src/gui/: anchor_drawer.py  app.py  client.py  color_generator.py  coordinates_transformer.py  drawer.py  measurements_drawer.py  user_drawer.py
server/src/resources/: abstract_owned_object_resource.py  abstract_resource.py  anchors_resources.py  log_resources.py  sensed_object.py  sensed_object_data.py  sensed_object_information.py  sensors.py  sensors_api.py  sensors_resources.py  (+5 more)
server/tests/: distance_evaluator.py
(+422 files in other folders)
